--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   cloud_firestore: ^0.14.3
   device_info: ^1.0.0
   package_info: ^0.4.3+2
+  font_awesome_flutter: ^8.10.0
 
 dev_dependencies:
   flutter_test:
@@ -54,7 +55,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
+  assets:
+    - assets/images/login_logo.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
@@ -78,5 +80,18 @@ flutter:
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
+  fonts:
+    - family: SFProSemiBold
+      fonts:
+        - asset: assets/fonts/SF-Pro/SF-Pro-Text-SemiBold.ttf
+
+    - family: SFProBold
+      fonts:
+        - asset: assets/fonts/SF-Pro/SF-Pro-Text-Bold.ttf
+
+    - family: SFProMedium
+      fonts:
+        - asset: assets/fonts/SF-Pro/SF-Pro-Text-Medium.ttf
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
