--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   device_info: ^1.0.0
   package_info: ^0.4.3+2
   font_awesome_flutter: ^8.10.0
+  smooth_star_rating: ^1.1.1
+  intl: ^0.16.0
 
 dev_dependencies:
   flutter_test:
@@ -56,7 +58,8 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-    - assets/images/login_logo.png
+    - assets/images/
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
